# aoc21

./: .gitignore  CMakeLists.txt  aoc-build-sln.bat  aoc.cc  build.bat  clean.bat  d1.cc  generate-build-files.bat  run.bat  rund.bat
days/: CMakeLists.txt  day1.cc  day1.h  day2.cc  day2.h  day3.cc  day3.h  day4.cc  day4.h  days.h  test_day.cc  test_day.h
testing/: CMakeLists.txt
testing/data/: bingo_cards.cc  bingo_cards.h
utilities/: CMakeLists.txt
utilities/data/: bingo_cards.cc  bingo_cards.h  position.cc  position.h
utilities/input/: input.cc  input.h  input_stream.cc  input_stream.h
utilities/messages/: errors.cc  errors.h
